name:                request
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/request#readme
license:             BSD3
license-file:        LICENSE
author:              An Long
maintainer:          aisk1988@gmail.com
copyright:           2020 An Long
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aisk/request
