name:                request
version:             0.4.0.0
-- synopsis:
description:         "HTTP client for haskell, inpired by requests and http-dispatch."
homepage:            https://github.com/aisk/request#readme
license:             BSD3
license-file:        LICENSE
author:              An Long
maintainer:          aisk1988@gmail.com
copyright:           2020 AN Long
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.HTTP.Request
  build-depends:       base               >= 4.7 && < 5
                     , aeson              >= 2.0 && < 2.3
                     , bytestring         >= 0.10.12 && < 0.13
                     , case-insensitive   >= 1.2.1 && < 1.3
                     , http-client        >= 0.6.4 && < 0.8
                     , http-types         >= 0.12.3 && < 0.13
                     , http-client-tls    >= 0.3.5 && < 0.4
                     , text               >= 1.2.4 && < 2.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aisk/request

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , request
                     , hspec
                     , bytestring         >= 0.10.12 && < 0.13
                     , text               >= 1.2.4 && < 2.2
                     , aeson
  default-language:    Haskell2010
